--- a/style.css
+++ b/style.css
@@ -1,9 +1,93 @@
-h3{
-    color:red;
+body{
+    padding:0;
+    margin:0;
+    font-family: 'Poppins', sans-serif;
 }
-span{
-    color: blue;
+
+h1{
+    font-size: 48px;
 }
-img{
-    width: 800px;
+
+h2{
+    font-size: 40px;
+}
+
+.orange-color{
+    color:orange;
+}
+
+p{
+    color:dimgray
+}
+
+.link_button{
+    background-image: linear-gradient(45deg,lightsalmon,tomato);
+    color:white;
+    font-weight: 700;
+    font-size: 18px;
+    text-decoration: none;
+    padding:10px 40px;
+    border-radius: 5px;
+    display: inline-block;
+}
+
+section{
+    height: 500px;
+    padding-bottom:150px;
+}
+
+.top-banner{
+    background-image: url("images/top-banner.png");
+    background-repeat: no-repeat;
+}
+
+.half_width{
+    width:40%;
+    margin-left:5%;
+    padding-left:2%;
+    float:left;
+}
+
+.half_width img{
+    width: 100%;
+}
+
+.middle_banner{
+ background-image: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+div#full_stack {
+    height: 80%;
+    box-shadow: 5px 7px 40px gray;
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, lightsalmon,tomato);
+    border-image-slice: 1;
+}
+
+div#baby {
+    height: 80%;
+    box-shadow: 5px 7px 40px gray;
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, blue,cyan);
+    border-image-slice: 1;
+}
+
+.experiment{
+    background-image: url("images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+.dot{
+    text-align: center;
+}
+
+.colered{
+    color:orange
+}
+
+footer p{
+    text-align: center;
 }
